Add hover cards for replies that exceed threaded comment depth